# memgraph

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt
libs/: .gitignore  CMakeLists.txt  graphar0.11.4.patch  setup.sh
src/: CMakeLists.txt  memgraph.cpp  memgraph_tmp.cpp
src/communication/v2/: pool.hpp
src/flags/: experimental.cpp  experimental.hpp
src/query/: CMakeLists.txt  context.hpp  interpreter.cpp  interpreter_context.cpp  interpreter_context.hpp  typed_value.hpp
src/query/custom_cursors/: CMakeLists.txt  all.hpp  bfs.hpp  create_edge.hpp  create_node.cpp  create_node.hpp  once.cpp  once.hpp  produce.cpp  produce.hpp  scanall.cpp  scanall.hpp  utils.hpp
src/query/plan/: cursor.hpp  operator.cpp  operator.hpp
src/query/procedure/: mg_procedure_impl.hpp
src/query/v2/: CMakeLists.txt  interpreter.cpp  typed_value.hpp
src/storage/: CMakeLists.txt
src/storage/custom_storage/: CMakeLists.txt  gar_database.hpp  storage.cpp  storage.hpp  types.hpp  vertex.hpp
src/storage/rocks/: CMakeLists.txt  serialization.hpp  slk.hpp  storage.cpp  storage.hpp  vertex.hpp
src/storage/v2/: storage_mode.cpp  storage_mode.hpp
src/utils/: betree.hpp  coro.hpp
tests/benchmark/: CMakeLists.txt
tests/manual/: .gitignore  CMakeLists.txt  boost_fib_heap_alloc.cpp  graphar.cpp  hashing_research.cpp  pmr.cpp  query_push.cpp  slk_storage.cpp  storage_rocks.cpp  test.cpp  test_coro.cpp  test_lcp.lcp
tests/unit/: CMakeLists.txt  query_v2_query_plan_common.hpp  query_v2_query_plan_hard_coded_queries_compare.cpp  storage_test_utils.cpp
(+18 files in other folders)
